# ClothLens

./: .gitignore  LICENSE  PROJECT_GUIDE.md  README.md  pyproject.toml
baselines/: segformer_demo_report.json
configs/: app.yaml  app_unet.yaml  train.yaml  train_rtx5070.yaml  train_t4.yaml
docs/: UNET_TRAINING.md
scripts/: build_index.py  compare_search_reports.py  create_demo_data.py  evaluate_search.py  export_project_context.py  prepare_deepfashion2_subset.py  setup_training_env.ps1  setup_training_env.sh
src/clothing_search/: __init__.py  catalog.py  config.py  evaluation.py  pipeline.py
src/clothing_search/api/: __init__.py  __main__.py  app.py  imaging.py
src/clothing_search/api/static/: app.js  styles.css
src/clothing_search/embeddings/: __init__.py  encoder.py
src/clothing_search/search/: __init__.py  models.py  qdrant_store.py
src/clothing_search/segmentation/: __init__.py  base.py  categories.py  crop.py  dataset.py  metrics.py  segformer.py  train.py  transforms.py  unet.py  unet_segmenter.py
tests/: test_catalog.py  test_compare_search_reports_script.py  test_config.py  test_create_demo_data_script.py  test_evaluate_search_script.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_pipeline.py  test_prepare_deepfashion2_subset_script.py
tests/api/: test_app.py
tests/embeddings/: test_encoder.py
tests/search/: test_qdrant_store.py
tests/segmentation/: test_categories.py  test_crop.py  test_dataset.py  test_metrics.py  test_segformer.py  test_training_setup.py  test_transforms.py  test_unet.py
(+1 files in other folders)
