[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "clothlens"
version = "0.1.0"
description = "ClothLens: similar clothing search using segmentation and embeddings."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.0",
    "Pillow>=10.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.12",
]
ml = [
    "albumentations>=2.0",
    "opencv-python-headless>=4.10",
    "pytorch-lightning>=2.6",
    "segmentation-models-pytorch>=0.5",
    "torch>=2.7",
    "torchmetrics>=1.7",
    "torchvision>=0.22",
]
search = [
    "qdrant-client>=1.18,<2",
    "safetensors>=0.5",
    "torch>=2.7",
    "torchvision>=0.22",
    "transformers>=4.50,<5",
]
api = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clothing_search"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["clothing_search"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
